app/client/components/ViewLayout.css
.view_leaf {
  position: relative;
  flex: 1 1 0px;
}

.viewsection_buttons {
  margin-left: 4px;
  display: flex;
  align-items: center;
  gap: 8px;
  align-self: flex-start;
}

.viewsection_title {
  align-items: center;
  flex-shrink: 0;
  cursor: default;
  min-height: 24px;
  margin-left: -16px;   /* to include drag handle that shows up on hover */
  margin-bottom: 4px;
  white-space: nowrap;
  overflow: hidden;
}

.viewsection_title, .viewsection_title_font {
  color: var(--grist-theme-text-light, var(--grist-color-slate));
  font-size: var(--grist-small-font-size);
  font-weight: 500;
}

.viewsection_content {
  overflow: visible;
  margin: 12px;
  background-color: var(--grist-theme-widget-bg, white);
}

.viewsection_btn {
  display: inline-block;
  padding: 0px 4px;
}

.viewsection_settings {
  display: inline-block;
  vertical-align: middle;
}

.viewsection_status_icons {
  color: #999999;
}

.viewsection_status_icons > .status_icon:hover {
  color: black;
}

.viewsection_status_icons.active_section {
  color: #AEC6FE;
}

.viewsection_status_icons.active_section  > .status_icon:hover {
  color: white;
}

.viewsection_truncated {
  position: absolute;
  right: 8px;
  bottom: 8px;
  background-color: red;
  color: white;
  z-index: 1;
}

.link_direction_icon {
  display: inline-block;
  position: relative;
  vertical-align: top;
  width: 1.9rem;
  height: 1.2rem;
  margin: .25rem -.1rem 0 -.2rem;
}

.viewsection_status_icons.active_section  > .status_icon.unsaved_changes {
  text-shadow: 0px 0px 5px #fff;
  color: #FFFFFF;
}

.view_data_pane_container {
  position: relative;
  flex: auto;
  border: 1px solid var(--grist-theme-widget-border, var(--grist-color-dark-grey));
}

.diff .view_data_pane_container {
  border: none;
}

@media not print {
.active_section > .view_data_pane_container {
  box-shadow: -2px 0 0 0px var(--grist-theme-widget-active-border, var(--grist-color-light-green));
  border-left: 1px solid var(--grist-theme-widget-active-border, var(--grist-color-light-green));
}

.active_section--no-focus > .view_data_pane_container {
  box-shadow: -2px 0 0 0px var(--grist-theme-widget-active-non-focused-border);
  border-left: 1px solid var(--grist-theme-widget-active-non-focused-border);
}

.active_section > .view_data_pane_container.viewsection_type_detail {
  /* this color is a translucent version of grist-color-light-green */
  box-shadow: -2px 0 0 0px var(--grist-theme-cursor-inactive, var(--grist-color-inactive-cursor));
  border-left: 1px solid var(--grist-theme-cursor-inactive, var(--grist-color-inactive-cursor));
}
}

/* Used by Raw Data UI */
.active_section--no-indicator > .view_data_pane_container,
.active_section--no-indicator > .view_data_pane_container.viewsection_type_detail {
  box-shadow: none;
  border-left: 1px solid var(--grist-theme-widget-border, var(--grist-color-dark-grey));
}

/* Used by full screen section. Removes the green box-shadow and restores normal color of the border.
   It still leaves the indicator for the cardlist selection (the green box shadow in card) which looks nice.
*/
.layout_box_maximized .active_section > .view_data_pane_container{
  box-shadow: none;
  border: 1px solid var(--grist-theme-widget-border, var(--grist-color-dark-grey));
}
/* Remove the drag indicator */
.layout_box_maximized .active_section .viewsection_drag_indicator {
  visibility: hidden !important;
}


.disable_viewpane {
  justify-content: center;
  text-align: center;
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 100%;
  color: var(--grist-theme-text-light, var(--grist-color-slate));
  background-color: rgba(0, 0, 0, 0.1);
  font-size: 12pt;
}

.status_icon.unsaved_changes {
  text-shadow: 0px 0px 5px #8A8A8A;
  color: #FFFFFF
}

.link_direction_icon.has_in_arrow {
  margin-left: .3rem;
}

.link_direction_icon.has_out_arrow {
  margin-right: .2rem;
}

.link_icon {
  position: absolute;
  font-size: 1.05rem;
  left: .45rem;
}

.link_out_arrow {
  position: absolute;
  top: .5rem;
  left: 1.3rem;
  font-size: .65rem;
  transform: scale(.8, 1);
}

.link_in_arrow {
  position: absolute;
  top: .05rem;
  left: 0;
  font-size: .65rem;
  transform: scale(.8, 1);
}

.sort_icon {
  display: inline-block;
  position: relative;
  vertical-align: top;
  width: 1.2rem;
  height: 1.2rem;
  font-size: 1.0rem;
  margin: .25rem .1rem 0 .3rem;
}

.filter_icon {
  display: inline-block;
  position: relative;
  vertical-align: top;
  width: 1.2rem;
  height: 1.2rem;
  font-size: 1.0rem;
  margin: .25rem .1rem 0 .3rem;
}

.shaking {
  animation: shake 0.4s ease;
  transform: translate(0, 0);
}

@keyframes shake {
  10%, 90% {
    transform: translate(2px, 0);
  }
  30%, 70% {
    transform: translate(-3px, 0);
  }
  50% {
    transform: translate(3px, 0);
  }
}

